<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sakebook.android.sample.parallaxsample.acitvities.TopActivity">

    <Button
        android:id="@+id/button_gradation"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_gradation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_indicator"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_gradation"
        android:text="@string/title_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_transform_indicator"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_indicator"
        android:text="@string/title_transform_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_parallax_animation"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_transform_indicator"
        android:text="@string/title_parallax_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_transition_animation"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_parallax_animation"
        android:text="@string/title_transition_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_image"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_transition_animation"
        android:text="@string/title_parallax_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>
